# simpler

./: PLAN_enable_profiling_level.md  PTO2_PERF_LEVEL_PLAN.md  README.md  ci.py  conftest.py  log  pyproject.toml  run_5.sh  run_5_abg.sh  run_5_hbg.sh  run_5_tmr.sh  run_pa_unroll.sh  run_pa_unroll_prof_first.sh
.claude/commands/: perf-example-device.md  perf-runtime-device.md  profile.md  test-all-device.md  test-all-sim.md  test-example-device.md  test-example-sim.md  test-runtime-device.md  test-runtime-sim.md
.claude/rules/: architecture.md
.github/ISSUE_TEMPLATE/: performance_issue.yml
.github/workflows/: ci.yml
docs/: architecture.md  chip-level-arch.md  ci.md  developer-guide.md  getting-started.md  hierarchical_level_runtime.md  macos-libomp-collision.md  orchestrator.md  python-packaging.md  scheduler.md  sim_multi_device_isolation.md  task-flow.md  tensor-dump.md  testing.md  worker-manager.md
python/: bindings.py  kernel_compiler.py  runtime_builder.py  runtime_compiler.py  task_interface.py
simpler_setup/: code_runner.py  log_config.py  pto_isa.py  runtime_builder.py  scene_test.py
src/a5/platform/sim/: CMakeLists.txt
src/a5/platform/sim/aicore/: CMakeLists.txt  inner_kernel.h  kernel.cpp
src/a5/platform/sim/aicpu/: CMakeLists.txt  cpu_sim_task_cookie.cpp  device_log.cpp  device_malloc.cpp  inner_platform_regs.cpp
src/a5/platform/sim/host/: CMakeLists.txt  device_runner.cpp  device_runner.h  platform_compile_info.cpp  pto_runtime_c_api.cpp
tools/: benchmark_rounds.sh  perf_to_mermaid.py  swimlane_converter.py  verify_packaging.sh
(+283 files in other folders)
